<resources>
    <string name="app_name">BudgetWise</string>
    <!-- Main Bottom Nav Tab  -->
    <string name="home_tab">Inicio</string>
    <string name="income_tab">Ingresos</string>
    <string name="expenses_tab">Gastos</string>
    <!-- Card Dashboard Home  -->
    <string name="val_money">$10,000.00</string>
    <string name="available_money">Dinero disponible</string>
    <string name="income">Ingreso</string>
    <string name="expense">Gasto</string>
    <string name="title_activity_pie_chart">PieChart</string>
    <!-- Add Income and Add Expense Screens  -->
    <string name="add_income_title">Agregar ingreso</string>
    <string name="add_expense_title">Agregar gasto</string>
    <string name="expense_name_label">Nombre del gasto</string>
    <string name="income_name_label">Nombre del ingreso</string>
    <string name="quantity">Cantidad</string>
    <string name="money_value_generic">$1.0</string>
    <string name="add_button">Agregar</string>
    <string name="error_empty_box">Este campo no puede quedar vacío</string>
    <!-- Splash activity  -->
    <string name="welcome_back_finance_app">Bienvenido a tu app de finanzas personales</string>
    <string name="by_projectName">osmardev.tech</string>
</resources>