<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="tech.osmardev.budgetwise.view.dashboard.DashboardFragment"
        android:label="@string/home_tab"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_expenses"
        android:name="tech.osmardev.budgetwise.view.expenses.ExpensesFragment"
        android:label="@string/expenses_tab"
        tools:layout="@layout/fragment_expenses" />

    <fragment
        android:id="@+id/navigation_incomes"
        android:name="tech.osmardev.budgetwise.view.incomes.IncomesFragment"
        android:label="@string/income_tab"
        tools:layout="@layout/fragment_incomes" />
</navigation>