<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/dash_card_view"
            android:layout_width="350dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:cardBackgroundColor="#07264D"
            card_view:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="54dp"
                    android:text="@string/val_money"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/white"
                    app:fontFamily="sans-serif" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available_money"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#BAC2CC"
                    app:fontFamily="sans-serif" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_add_income"
                        android:layout_width="235dp"
                        android:layout_height="61dp"
                        android:alpha="0.25"
                        android:backgroundTint="#FFFFFF"
                        android:contentDescription="@string/expense"
                        android:src="@drawable/ic_income"
                        android:layout_margin="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"/>


                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_add_expense"
                        android:layout_width="235dp"
                        android:layout_height="61dp"
                        android:alpha="0.25"
                        android:backgroundTint="#FFFFFF"
                        android:contentDescription="@string/income"
                        android:src="@drawable/ic_expense"
                        android:layout_margin="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/income"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#BAC2CC"
                        app:fontFamily="sans-serif" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/expense"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#BAC2CC"
                        app:fontFamily="sans-serif" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>